dodanie mnozenia i dzielenia to Widoku

--- a/Views/Kalkulator/KalkulatorForm.cshtml
+++ b/Views/Kalkulator/KalkulatorForm.cshtml
@@ -9,6 +9,8 @@
     <select asp-for="znak">
         <option value="dod">Suma</option>
         <option value="ode">Różnica</option>
+        <option value="mnoz">Mnożenie</option>
+        <option value="dziel">Dzielenie</option>
     </select>
     <input type="submit" />
 </form>
